TRIP, AUTH, USER, et les schemas ok
